Bugs/click list (#32)
* trying to fix list click bug

* fixed overlap issue by rendering classes to component post state change

* removed !important, not necessary

* removed extra space

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,8 +4,8 @@
 }
 
 .flash {
+    z-index: 1;
     position: absolute;
-    z-index: 1 !important;
 }
 
 .app {
